tests/tests/errors/2006-41.vb
'#compiler-options:/res:
'#compiler-message:Command line error BC2006 : option 'res' requires ':<resinfo>'
'#exit-code:1